@@ -1,5 +1,8 @@
 2007-02-06  Scott James Remnant  <scott@netsplit.com>
 
+	* util/tests/test_events.c, util/tests/test_jobs.c: Update the
+	message format checks here too.
+
 	* upstart/tests/test_wire.c (test_pop_pack): Free the array.
 
 	* upstart/tests/test_message.c (test_new, test_handle)
